Spring 3 Upgrade (#108)
* Openrewrite auto upgrade

Move autoconfiguration to correct file for Spring 3

Openrewrite auto upgrade

* Migrate management configs for Spring 3